--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           }, {}).ip
       })
       async function getId() {
-        let ip
+        let ip_v4
         await $.getJSON('https://api.ipify.org?format=jsonp&callback=?', function (data) {
-          ip = data.ip //取得ip位址
+          ip_v4 = data.ip //取得ip位址
         })
         const options = {
           preprocessor: null,
@@ -81,8 +81,8 @@
           const values = components.map(function (component) {
             return component
           })
-          list.unshift({ key: 'ip', value: ip }, { key: 'ip_v6', value: ip_v6 })
-          values.push(ip) //把ip位置加入雜湊演算
+          list.unshift({ key: 'ip_v4', value: ip_v4 }, { key: 'ip_v6', value: ip_v6 })
+          values.push(ip_v4) //把ip位置加入雜湊演算
           console.log(list)
           console.log(values)
           for (let i = 0; i < list.length; i++) {
