--- a/index.html
+++ b/index.html
@@ -15,15 +15,22 @@
     ></script>
     <script src="//cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@2/dist/fingerprint2.min.js"></script>
     <script>
-      let iv_v6
-      $.get('https://www.cloudflare.com/cdn-cgi/trace', function (data) {
-        ip_v6 = data
-          .trim()
-          .split('\n')
-          .reduce(function (obj, pair) {
-            pair = pair.split('=')
-            return (obj[pair[0]] = pair[1]), obj
-          }, {}).ip
+      let ip_v6
+      // $.get('https://www.cloudflare.com/cdn-cgi/trace', function (data) {
+      //   ip_v6 = data
+      //     .trim()
+      //     .split('\n')
+      //     .reduce(function (obj, pair) {
+      //       pair = pair.split('=')
+      //       return (obj[pair[0]] = pair[1]), obj
+      //     }, {}).ip
+      // })
+      fetch('https://www.cloudflare.com/cdn-cgi/trace')
+      .then((res) => res.text())
+      .catch((error) => console.error('Error:', error))
+      .then((data) => {
+        let ipRegex = /[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}/
+        ip_v6 = data.match(ipRegex)[0]
       })
       async function getId() {
         let ip_v4
