--- a/index.html
+++ b/index.html
@@ -13,35 +13,114 @@
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"
     ></script>
-    <script src="//cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@2/dist/fingerprint2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fingerprintjs2/2.1.5/fingerprint2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
     <script>
-      let ip_v6
-      // $.get('https://www.cloudflare.com/cdn-cgi/trace', function (data) {
-      //   ip_v6 = data
-      //     .trim()
-      //     .split('\n')
-      //     .reduce(function (obj, pair) {
-      //       pair = pair.split('=')
-      //       return (obj[pair[0]] = pair[1]), obj
-      //     }, {}).ip
-      // })
-      fetch('https://www.cloudflare.com/cdn-cgi/trace')
-      .then((res) => res.text())
-      .catch((error) => console.error('Error:', error))
-      .then((data) => {
-          ip_v6 = data
+      const key = 'abcdefghijklmnop'
+
+      const encrypt = function (message) {
+        const encrypt = CryptoJS.AES.encrypt(message, CryptoJS.enc.Utf8.parse(key), {
+          mode: CryptoJS.mode.ECB,
+          padding: CryptoJS.pad.Pkcs7,
+        })
+        return encrypt + ''
+      }
+
+      const decrypt = function (message) {
+        const decrypt = CryptoJS.AES.decrypt(message, CryptoJS.enc.Utf8.parse(key), {
+          mode: CryptoJS.mode.ECB,
+          padding: CryptoJS.pad.Pkcs7,
+        })
+        return decrypt.toString(CryptoJS.enc.Utf8)
+      }
+
+      let ip_v4 = ''
+      let ip_v6 = ''
+      let fp_attributes = []
+      let fp_id = ''
+      let asshole = false
+      let first_time = true
+      let purge = false
+      let action = 'ENTER'
+      let customer_id = 'TEST-0001'
+      let ps_id = ''
+      let customized_data = {}
+      const set_customized_data = function (k, v) {
+        if (!customized_data.hasOwnProperty(k)) {
+          customized_data[k] = v
+        }
+      }
+      let ga_id
+      try {
+        ga_id = ga.getAll()[0].get('clientId')
+      } catch (error) {
+        ga_id = ''
+      }
+
+      const current_url = window.location.href
+      const referrer = document.referrer
+      const date = new Date().toISOString().split('T')[0].split('-').join('')
+      const token = CryptoJS.MD5('bigdata_' + date + '_bigdata').toString()
+      const api = 'http://34.81.73.104:39700/insert_data'
+
+      const uuid = (function uuidv4() {
+        return ([1e7] + -1e3 + -4e3 + -8e3 + -1e11).replace(/[018]/g, function (c) {
+          return (c ^ (crypto.getRandomValues(new Uint8Array(1))[0] & (15 >> (c / 4)))).toString(16)
+        })
+      })()
+
+      const tag_list = (function getTag() {
+        const tag_element = document.getElementsByClassName('hashtags flexbox flexwrap')
+        if (tag_element.length > 0) {
+          return tag_element[0].innerText.split('\n')
+        } else {
+          return ''
+        }
+      })()
+
+      const window_id = (function makeid(length) {
+        let result = ''
+        const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'
+        const charactersLength = characters.length
+        for (let i = 0; i < length; i++) {
+          result += characters.charAt(Math.floor(Math.random() * charactersLength))
+        }
+        return result
+      })(5)
+
+      const get_ip = async () => {
+        const data1 = await fetch('https://api.ipify.org?format=jsonp&callback=?')
+          .then((res) => res.text())
+          .catch((error) => (ip_v4 = `ip_v4的CDN發生問題，錯誤訊息：${error}`))
+        ip_v4 = Object.values(JSON.parse(data1.slice(2, data1.length - 2)))[0]
+        const data2 = await fetch('https://www.cloudflare.com/cdn-cgi/trace')
+          .then((res) => res.text())
+          .catch((error) => (ip_v6 = `ip_v6的CDN發生問題，錯誤訊息：${error}`))
+        ip_v6 = data2
           .trim()
           .split('\n')
           .reduce(function (obj, pair) {
             pair = pair.split('=')
             return (obj[pair[0]] = pair[1]), obj
           }, {}).ip
-      })
-      async function getId() {
-        let ip_v4
-        await $.getJSON('https://api.ipify.org?format=jsonp&callback=?', function (data) {
-          ip_v4 = data.ip //取得ip位址
-        })
+        fp_precursor()
+      }
+      get_ip()
+
+      function fp_precursor() {
+        if (window.requestIdleCallback) {
+          requestIdleCallback(function () {
+            get_fp()
+          })
+        } else {
+          setTimeout(function () {
+            get_fp()
+          }, 500)
+        }
+      }
+
+      function get_fp() {
         const options = {
           preprocessor: null,
           audio: {
@@ -55,31 +134,22 @@
             extendedJsFonts: false,
           },
           screen: {
-            // 確保使用者旋轉手機時會ID保持一致
             detectScreenOrientation: true,
           },
           plugins: {
-            sortPluginsFor: [/palemoon/i], //對瀏覽器插件的順序作排列
+            sortPluginsFor: [/palemoon/i],
             excludeIE: false,
           },
           extraComponents: [],
           excludes: {
-            userAgent: true, //用戶代理字串 https://developer.mozilla.org/zh-TW/docs/Web/HTTP/Headers/User-Agent
-            openDatabase: true, //Chrome、Edge得到一樣的值，firefox的value為空陣列
-            // canvas: true, //由於系統的差別，字體渲染引擎不同，對抗鋸齒、次像素渲染等算法也不同，canvas將同樣的文字轉成圖片，得到的結果也是不同的。https://juejin.cn/post/6844903970180169742。https://browserleaks.com/canvas。渲染得到的圖片是以Data URL Base64編碼。
+            // deviceMemory: true,
+            // canvas: true,
             // webgl: true,
-            // webglVendorAndRenderer: true,
-            // fonts: true,
-            // audio: true, //Chrome、Edge得到一樣的值(124.04347527516)，firefox(35.7383295930922)。https://audiofingerprint.openwpm.com/
-            deviceMemory: true,
-            plugins: true,
-            // fonts:true, //Chrome、Edge得到一樣的值(48種字體),firefox多了兩個
-            pixelRatio: true, //設備像素比
-            doNotTrack: true, //確保無痕模式也可以追蹤。chrome、edge顯示not available；firefox顯示unspecified。用戶可自行在瀏覽器調整不給追蹤，此參數無法解掉。
-            adBlock: true, //是否安裝AdBlock (我有裝但是value為false?!)
-            fontsFlash: true, //已安裝的Flash字體列表，flash不是主流了
-            enumerateDevices: true, //列出有哪些多媒體的input與output可以用～例如：webcam、microphone這些可以使用(http://cloverhsc.blogspot.com/2018/09/webrtc-2-enumeratedevices.html)，但是不可靠，開啟新的分頁都會有不一樣的值(https://github.com/fingerprintjs/fingerprintjs/issues/375)。
-            //後五個是預設，但是有寫options要補回去
+            pixelRatio: true,
+            doNotTrack: true,
+            adBlock: true,
+            fontsFlash: true,
+            enumerateDevices: true,
           },
           NOT_AVAILABLE: 'not available',
           ERROR: 'error',
@@ -93,27 +163,120 @@
           const values = components.map(function (component) {
             return component
           })
-          list.unshift({ key: 'ip_v4', value: ip_v4 }, { key: 'ip_v6', value: ip_v6 })
-          values.push(ip_v4) //把ip位置加入雜湊演算
-          console.log(list)
-          console.log(values)
+          fp_id = Fingerprint2.x64hash128(values.join(''), 31)
+          $('#info').append(`<h3>${['fp_id']}:${fp_id}</h3>`)
+          $('#info').append(`<h3>${['uuid']}:${uuid}</h3>`)
           for (let i = 0; i < list.length; i++) {
             $('#info').append(`<h3>${list[i]['key']}:${list[i]['value']}</h3>`)
           }
-          const id = Fingerprint2.x64hash128(values.join(''), 31) //MurmurHash3 非加密的雜湊演算法
-          console.log(id)
         })
       }
-    </script>
-    <script>
-      if (window.requestIdleCallback) {
-        requestIdleCallback(getId)
-      } else {
-        setTimeout(getId, 500)
+
+      function set_data(fp_id, uuid) {
+        const user_data = JSON.parse(localStorage.getItem('dv'))
+        let user_id
+        if (user_data === null) {
+          purge = true
+          const encrypt_data = encrypt(`${fp_id},${uuid},${ip_v4},${ip_v6}`)
+          const json_data = JSON.stringify({
+            create_time: new Date().getTime(),
+            last_time: new Date().getTime(),
+            user_id: encrypt_data,
+            url: current_url,
+          })
+          localStorage.setItem('dv', json_data)
+        } else {
+          first_time = false
+          try {
+            user_id = decrypt(user_data.user_id)
+            if (user_id === '') {
+              asshole = true
+              purge = true
+              localStorage.removeItem('dv')
+              send_user_data(token, api, fp_attributes)
+              return
+            }
+          } catch (error) {
+            if (error) {
+              asshole = true
+              purge = true
+              localStorage.removeItem('dv')
+              send_user_data(token, api, fp_attributes)
+              return
+            }
+          }
+        }
+        if (first_time) {
+          send_user_data(token, api, fp_attributes)
+        } else {
+          let encrypt_data = ''
+          let json_data = ''
+          old_uuid = user_id.split(',')[1]
+          const expiration = (new Date().getTime() - JSON.parse(localStorage.getItem('dv')).create_time) / 1000
+          const quickly_visit = (new Date().getTime() - JSON.parse(localStorage.getItem('dv')).last_time) / 1000 < 3
+          const the_same_url = current_url === JSON.parse(localStorage.getItem('dv')).url
+          encrypt_data = encrypt(`${fp_id},${old_uuid},${ip_v4},${ip_v6}`)
+          json_data = JSON.stringify({
+            ...user_data,
+            user_id: encrypt_data,
+            last_time: new Date().getTime(),
+            url: current_url,
+          })
+          localStorage.setItem('dv', json_data)
+          if (quickly_visit && the_same_url) {
+            return
+          }
+          if (expiration <= 1800) {
+            send_user_data(token, api)
+          } else {
+            json_data = JSON.stringify({
+              ...user_data,
+              user_id: user_data.id,
+              create_time: new Date().getTime(),
+              last_time: new Date().getTime(),
+            })
+            localStorage.setItem('dv', json_data)
+            send_user_data(token, api, fp_attributes)
+          }
+        }
       }
-      //"deviceMemory"，0.25,0.5,1,2,4,8。如果電腦裝8gb以上記憶體，則value為8，代表至少有8gb記憶體。
-      //hardwareConcurrency 報告的值不一定是真實CPU核心數
-      //screenResolution 真實值
+
+      async function send_user_data(token, api, fp_attributes = []) {
+        const other_attributes = [
+          ['fp_id', fp_id],
+          ['uuid', uuid],
+          ['current_url', current_url],
+          ['referrer', referrer],
+          ['tags', tag_list],
+          ['ip_v4', ip_v4],
+          ['ip_v6', ip_v6],
+          ['purge', purge],
+          ['asshole', asshole],
+          ['customized_data', customized_data],
+          ['action', action],
+          ['window_id', window_id],
+          ['ga_id', ga_id],
+          ['customer_id', customer_id],
+          ['ps_id', ps_id],
+        ]
+        console.log(other_attributes)
+        try {
+          const response = await fetch(api, {
+            method: 'POST',
+            body: JSON.stringify({
+              data: Object.fromEntries(new Map(other_attributes.concat(fp_attributes))),
+            }),
+            headers: new Headers({
+              'Content-Type': 'application/json',
+              Authorization: `Bearer ${token}`,
+            }),
+          })
+          const result = await response.json()
+          console.log('result', result)
+        } catch (error) {
+          console.log('error', error.message)
+        }
+      }
     </script>
   </body>
 </html>
